--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "faq",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "google-translate-api": "^2.3.0",
     "mongoose": "^8.9.5"
   },
   "devDependencies": {
